fixed some layout bugs

--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -1,16 +1,30 @@
 .nav-bar {
-    padding: 1em;
+      padding: 1em;
     position: fixed;
     top: 0;
-    left: 0;    background-color: white;
+    left: 0;  
+      background-color: white;
     border: 1px solid white;
     color: white; 
     z-index: 1000; 
-    width: 95rem;
-    box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1); 
+box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1); 
+  }
+
+  .nav-item{
+    /* transform: translateX(280%); */
+    white-space: nowrap;
+    text-decoration: none;
+    margin-top: -30px;
+  }
+
+  .link{
+    text-decoration: none;
   }
   
-
+.btn-donate{
+margin-left: 80rem !important;  
+margin-top: -40px;
+}
 .nav-logo{
   font-size: 20px;
   font-weight: bold;
@@ -28,15 +42,17 @@
     text-align: center;
     width: 8rem;
     padding: 0.5rem;
-
-    margin-top: -43rem !important;
+margin: 0;
+    /* margin-top: -43rem !important; */
     border-radius: 4px;
 }
 
 .nav-item{
-    color: #525560 !important;transform: translate(280%);
+    color: #525560 !important;
+    margin-left: 1rem;
 
 }
+
 
 .link{
     color:#525560;
